...
            "state" : "translated",
            "value" : "À propos"
          }
        }
      }
    },
    "Add" : {
      "comment" : "The label of a button that adds a new device.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Ajouter un nouvel appareil"
          }
        }
      }
    },
    "Add Device" : {
      "comment" : "A button that allows the user to add a new device.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
...
    "BLE Passkey" : {

    },
    "BLE Security" : {

    },
    "Bluetooth" : {

    },
    "Bluetooth Control" : {

    },
    "Brightness: %lld" : {

    },
    "Cancel" : {
      "comment" : "Title of the \"Cancel\" button in the device update view.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
...
    "Close" : {

    },
    "Connecting to %@" : {

    },
    "Connection" : {

    },
    "Connection Type" : {

    },
    "Controls" : {
...
            "state" : "translated",
            "value" : "Supprimer"
          }
        }
      }
    },
    "Device List" : {
      "comment" : "The title of the device list screen.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Liste des appareils"
          }
        }
      }
    },
    "Done" : {
      "comment" : "Text for a button that dismisses a view when its associated action is complete.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Modifier"
          }
        }
      }
    },
    "Edit Device" : {
      "comment" : "The title of the view that allows users to edit details of a connected device.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Erreur réseau: %@"
          }
        }
      }
    },
    "New Device" : {
      "comment" : "The title of the view that allows users to add a new device.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Veuillez entrer une adresse valide"
          }
        }
      }
    },
    "Power: %@" : {

    },
    "Pull to refresh" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
...
        }
      }
    },
    "Select BLE Device" : {

    },
    "Settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
...
            "state" : "translated",
            "value" : "Paramètres"
          }
        }
      }
    },
    "Wi-Fi Address" : {

    },
    "WLED Documentation" : {
      "comment" : "A menu item that links to WLED's documentation.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
...
